--- a/TabC/TabC-Info.plist
+++ b/TabC/TabC-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>jp.undapt.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>jp.undapt.pipet</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
